--- a/app/styles/_dreamshare.scss
+++ b/app/styles/_dreamshare.scss
@@ -28,21 +28,21 @@
     }
 
     .bgImage1 {
-      background-image: url('main-body/works/1.png');
+      background-image: url('../main-body/works/1.png');
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
     }
 
     .bgImage2 {
-      background-image: url('main-body/works/2.png');
+      background-image: url('../main-body/works/2.png');
       background-position: left;
       background-repeat: no-repeat;
       background-size: cover;
     }
 
     .bgImage3 {
-      background-image: url('main-body/works/3.png');
+      background-image: url('../main-body/works/3.png');
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
