--- a/app/styles/_header-s.scss
+++ b/app/styles/_header-s.scss
@@ -8,7 +8,7 @@
     height: 100vh;
     padding: 5vh 15% 0 15%;
     // border: 1px solid red;
-    background-image: url(header/img/HeadaerFoto.png);
+    background-image: url(../header/img/HeadaerFoto.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -63,11 +63,7 @@
 
         }
 
-        // @media screen and (min-width:767px) and (max-width:1440px) {
-        //     &_logo {
-        //         // color: darkcyan;
-        //     }
-        // }
+      
 
 
     
